[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelprism"
version = "0.1.0"
description = "Pixel Prism — dynamic math and animation engine"
readme = "README.md"
authors = [
    {name = "Nils Schaetti", email = "nils.schaetti@gmail.com"},
]
license = {text = "GPL-3.0-or-later"}

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

requires-python = ">=3.10"

dependencies = [
    "numpy",
    "tqdm",
    "pillow",
    "requests",
    "svgpathtools",
    "lxml",
    "colorama",
    "matplotlib",
    "opencv-python",
    "pycairo",
    "torch",
    "scikit-image",
    "click",
]

[project.urls]
Homepage = "https://github.com/nschaetti/PixelPrism"
Documentation = "https://pixelprism.readthedocs.io/"

# ---- ENTRY POINTS (optional) ----
# Only if you really have pixelprism/main.py or a main() in __init__.py
# Otherwise REMOVE this block.
#[project.scripts]
#pixelprism = "pixelprism:main"


# ---- PACKAGE DISCOVERY ----
[tool.setuptools.packages.find]
where = ["."]
include = ["pixelprism*"]

# No namespace packaging, no legacy configs -> remove everything else
